deploy-vpc-ec2-with-terraform/4-routetb.tf
resource "aws_route_table" "public_custom_route_table" {
  vpc_id = aws_vpc.MyVpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "${var.project-name}-public-rt"
  }
}
